the 1.7.10 backport